main.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

.max-width-container {
  max-width: 1200px;
  margin: 0 auto;
}

.max-width {
  background-color: #354463;
  position: relative;
  /* top: -5px; */
  margin: 0 auto;
}

.head-logo img {
  width: 100px;
  margin-left: 15px;
}

.name h4 {
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
  display: none;
}

.header-with-menu {
  display: flex;
}

.menu-button {
  background: none;
  width: 25px;
  height: 25px;
  border: none;
  outline: none;
  margin-right: 35px;
  z-index: 2;
}

/* for making hamburger and giving it effects */

.lines {
  z-index: 1;
  width: 37px;
  height: 5px;
  border-radius: 10px;
  background-color: #354463;
  margin-bottom: 5px;
  transition: 1s ease;
}

#l3-new {
  display: none;
}

#l1-new {
  transform: translateY(12px) translateX(-3px) rotate(-40deg);
  transform-origin: 70% 100% 100%;
  margin-bottom: 10px;
  transition: 0.8s ease-out;
  z-index: 1;
  background-color: white;
}

#l2-new {
  transform: translateY(0px) rotate(40deg);
  transform-origin: 55% -100%;
  transition: 0.8s ease-out;
  z-index: 1;
  background-color: white;
}

/* for giving flood font style */

.quote {
  font-family: flood-std, sans-serif;
}
.dark-color-background-quotation {
  background-color: #142850;
}

.quotation {
  font-family: flood-std, sans-serif;
}

/* for pushing logo and hamburger to extremes */

.header-wrapper {
  width: 100%;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

/* for hiding menu items */

.menu {
  display: flex;
  flex-direction: column;
  width: 0vw;
  background-color: #354463;
  position: absolute;
  top: 0px;
  right: 0px;
  overflow: hidden;
  z-index: 1;
  transition: 1s ease-in-out;
  border-radius: 4px;
}
#b1 {
  margin-top: 90px;
}
#b4 {
  margin-bottom: 50px;
}

/* for displaying menu items */

.menu-displayed {
  display: flex;
  flex-direction: column;
  width: 60vw;
  background-color: #354463;
  position: absolute;
  top: 0px;
  right: 0px;
  overflow: hidden;
  z-index: 1;
  transition: 1s ease-in-out;
  border-radius: 4px;
}

/* giving padding between anchor tags in menu dropdown */

.menu-items {
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
  margin: auto;
  text-decoration: none;
  color: white;
  padding-bottom: 15px;
  padding-top: 15px;
  width: 200px;
  text-align: center;
  font-weight: 600;
}

/* giving style and flex direction for quotation and institute card and aligning to center */

.quotation-with-name-and-take-action-head {
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
  display: flex;
  flex-direction: column;
  background-color: #142850;
  align-items: center;
}

/* arranging contents inside quotation section to improve readability and design */

.bulletin-wrapper {
  height: 280px;
  width: 80%;
  margin: 50px auto;
  background-color: white;
}

.name-of-institution {
  width: 90%;
  margin: auto;
}

/* designing small box at top of millat card */

.decoration {
  background-color: #354463;
  width: 50%;
  height: 5vh;
  position: relative;
  left: 10%;
  top: -5%;
}

.name-of-institution h2 {
  color: #354463;
  font-size: 30px;
  text-align: left;
  margin-left: 10px;
  margin-top: 10px;
}

.quote {
  font-family: flood-std, sans-serif;
  font-weight: bold;
  width: 90%;
  margin: 20px auto;
  font-family: flood-std, sans-serif;
  color: white;
  text-transform: uppercase;
  font-size: xx-large;
  text-align: center;
}

/* aligning mahatma gandhi text to little right */

.quotation h4 {
  text-transform: uppercase;
  color: white;
  font-family: flood-std, sans-serif;
  position: relative;
  left: 45%;
}

.take-action-head {
  display: inline;
}

.take-action-head h4 {
  text-transform: uppercase;
  text-align: center;
  color: white;
  background-color: #354463;
  padding: 5px;
}

.quotation-with-name-wrapper {
  padding-bottom: 50px;
  overflow-x: hidden;
}

.take-action-section {
  padding: 10px auto;
  padding-top: 30px;
  padding-bottom: 30px;
  width: 85%;
  margin: 0 auto;
  background-color: #354463;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
  color: white;
}

.take-action-items {
  width: 100%;
  margin-bottom: 20px;
}

.take-action-items p {
  text-transform: capitalize;
  line-height: 25px;
  font-size: 14px;
}

.take-action-section h3 {
  text-transform: uppercase;
  font-size: 20px;
}

@media screen and (min-width: 425px) {
  .bulletin-wrapper h2 {
    font-size: 35px;
  }
  .bulletin-wrapper {
    padding-bottom: 250px;
    padding-top: 30px;
  }
  .decoration {
    margin-top: -44px;
  }
}
/* ... */

